# 1inch-Hackathon

./: .gitignore  BITCOIN_BOUNTY_SUBMISSION.md  CHANGELOG-00.md  CHANGELOG-01.md  CHANGELOG-Armando.md  CHANGELOG.md  COSMOS-IMPLEMENTATION-GUIDE.md  COSMOS-PHASE4-SUMMARY.md  CROSS_CHAIN_INTEGRATION.md  NEXT-STEPS.md  PARTIAL_FILLS_ROADMAP.md  PHASE4-SUMMARY.md  README.md  TESTING.md  UI_DEVELOPMENT_PLAN.md  cosmos-integration-test-report.json  package.json  phase4-integration-demo.js  start-cross-chain-integration.sh  stop-cross-chain-integration.sh  test-cosmos-integration.js
bitcoin-scripts/: package.json
changelogs/: CHANGELOG-00.md
contracts/aptos/: Move.toml
contracts/bitcoin/: README.md  atomic-swap-complete.json  bitcoin-addresses.json  bitcoin-order-success.json  bitcoin-testnet-wallet.json  clean-10k-htlc.json  clean-10k-order.json  jest.config.js  live-bitcoin-htlc.json  manual-funding-instructions.json  package.json
contracts/cosmos/: COSMOS_IMPLEMENTATION_PLAN.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.build  Makefile  PHASE3-TESTING-GUIDE.md  README.md  build.sh  deploy.sh  test-integration.sh
contracts/cosmos/artifacts/: fusion_plus_cosmos.wasm
contracts/cosmos/keys/config/: config.toml
contracts/cosmos/keys/keyring-test/: cosmos-deployer.info  fusion-deployer.info  neutron-deployer.info
contracts/cosmos/src/: integration_tests.rs  lib.rs
contracts/ethereum/: .env.example  LIVE_DEMO_GUIDE.md  PHASE2-TESTING-GUIDE.md  SEPOLIA-DEPLOYMENT.md  bitcoin-deployment-results.json  complete-atomic-swap-results.json  complete-demo-results.json  demo-results.json  deployments-local.json  deployments-working.json  deployments.json  fusion-plus-deployment.json  hardhat.config.js  near-compatible-order.json  package.json  sepolia-deployment-current.json  sepolia-deployment.json
contracts/near/: .env.example  .gitignore  Cargo.toml  FUSION_PLUS_INTEGRATION.md  LIVE_DEMO_GUIDE.md  README.md  build.sh  demo.js  deploy-fusion.sh  deploy.sh  live-demo-eth-to-near.js  package.json
contracts/near/src/: lib.rs
contracts/near/tests/: fusion_integration_tests.rs  integration_tests.rs  testnet_deployment_tests.rs
demo/: cosmos-fusion-demo.js  monitor-demo.js
docs/: intent-format-specification.md
relayer-services/: package.json
shared/: CHANGELOG.md  jest.config.js  package.json  test-cosmos.js  tsconfig.json
ui/: .env.example  CHANGELOG.md  README.md  TESTING_RESULTS.md  TESTING_STRATEGY.md  TESTING_SUMMARY.md  jest.config.js  jest.setup.js  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo
(+349 files in other folders)
