[package]
name = "fusion-plus-cosmos"
version = "0.1.0"
edition = "2021"
description = "1inch Fusion+ CosmWasm contract for Cosmos chains"
license = "MIT"
repository = "https://github.com/your-org/1inch-cross-chain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0"
cosmwasm-schema = "1.0"
cw-storage-plus = "0.13"
cw2 = "0.13"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
cw-multi-test = "0.13"
cosmwasm-schema = "1.0"