[package]
name = "cross-chain-htlc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.5.0"
serde_json = "1.0"
hex = "0.4"

[dev-dependencies]
near-sdk = { version = "5.5.0", features = ["unit-testing"] }
tokio = { version = "1.0", features = ["full"] }
near-workspaces = "0.14"
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true